--- a/index.html
+++ b/index.html
@@ -199,6 +199,23 @@
 <section id="legal" class="section">
   <h2>Legal</h2>
   <p><a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms & Conditions</a> | <a href="earnings.html">Earnings Disclaimer</a></p>
+
+Form 2
+  <form
+  action="https://formspree.io/f/manpkynv"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
 </section>
 
 <footer>
