--- a/index.html
+++ b/index.html
@@ -194,13 +194,8 @@
     <textarea placeholder="What types of insurance leads do you want? (e.g. Workers Comp, GL, Auto)" required></textarea>
     <button type="submit">Request Access</button>
   </form>
-</section>
 
-<section id="legal" class="section">
-  <h2>Legal</h2>
-  <p><a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms & Conditions</a> | <a href="earnings.html">Earnings Disclaimer</a></p>
-
-Form 2
+  Form 2
   <form
   action="https://formspree.io/f/manpkynv"
   method="POST"
@@ -213,9 +208,19 @@ Form 2
     Your message:
     <textarea name="message"></textarea>
   </label>
+    <input type="text" placeholder="Full Name" required />
+    <input type="email" placeholder="Business Email" required />
+    <input type="text" placeholder="Agency Name" required />
   <!-- your other form fields go here -->
   <button type="submit">Send</button>
 </form>
+  
+</section>
+
+<section id="legal" class="section">
+  <h2>Legal</h2>
+  <p><a href="privacy.html">Privacy Policy</a> | <a href="terms.html">Terms & Conditions</a> | <a href="earnings.html">Earnings Disclaimer</a></p>
+
 </section>
 
 <footer>
