--- a/index.html
+++ b/index.html
@@ -194,6 +194,24 @@
     <textarea name="message" placeholder="What types of insurance leads do you want? (e.g. Workers Comp, GL, Auto)" required></textarea>
     <button type="submit">Request Access</button>
   </form>
+  <script>
+const form = document.querySelector("form");
+form.addEventListener("submit", async (e) => {
+  e.preventDefault();
+  const data = new FormData(form);
+  const response = await fetch(form.action, {
+    method: form.method,
+    body: data,
+    headers: { Accept: "application/json" },
+  });
+  if (response.ok) {
+    form.innerHTML = "<p class='text-green-500 text-center mt-4'>✅ Thank you! We'll be in touch soon.</p>";
+  } else {
+    form.innerHTML = "<p class='text-red-500 text-center mt-4'>❌ Something went wrong. Please try again.</p>";
+  }
+});
+</script>
+
 </section>
 
 
