--- a/index.html
+++ b/index.html
@@ -187,7 +187,9 @@
 
 <section id="form" class="section">
   <!-- Formspree setup -->
-  <form action="https://formspree.io/f/manpkynv" method="POST">
+  <form action="https://hook.make.com/your-webhook-url" method="POST">
+  … your input fields …
+</form>
     <input type="text" name="name" placeholder="Full Name" required />
     <input type="text" name="agency" placeholder="Agency Name" required />
     <input type="email" name="email" placeholder="Business Email" required />
