--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AgentFlow.io – Verified, Talk-Ready Insurance Leads</title>
+  <title>AgentFlux.com – Verified, Talk-Ready Insurance Leads</title>
   <style>
     :root {
       --primary: #0066ff;
@@ -153,7 +153,7 @@
 <body>
 
 <header>
-  <div class="logo">[AgentFlow.io Logo]</div>
+  <div class="logo">[AgentFlux.com Logo]</div>
   <nav>
     <a href="#how">How It Works</a>
     <a href="#form">Get Leads</a>
@@ -222,9 +222,9 @@ form.addEventListener("submit", async (e) => {
 </section>
 
 <footer>
-  AgentFlow.io<br>
+  AgentFlux.com<br>
   123 Any Street Ave, Any Town, NM 80068<br><br>
-  © 2025 AgentFlow.io – All Rights Reserved  
+  © 2025 AgentFlux.com – All Rights Reserved  
   <div><a href="privacy.html">Privacy</a> | <a href="terms.html">Terms</a> | <a href="earnings.html">Earnings</a></div>
 </footer>
 
