--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 <body>
 
 <header>
-  <div class="logo">[AgentFlux.com Logo]</div>
+  <div class="logo">AgentFlux.com</div>
   <nav>
     <a href="#how">How It Works</a>
     <a href="#form">Get Leads</a>
