--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <p>Using top-tier data sources like LeO and InsuranceXDate, we identify verified, renewal-ready business owners.</p>
     </div>
     <div class="card">
-      <h3>2️⃣ You Get Live Transfers</h3>
+      <h3>2️⃣ You Get Pre-Qualified Leads</h3>
       <p>Agents receive only “ready-to-talk” leads. No cold calls. No wasted time.</p>
     </div>
     <div class="card">
