--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
 </header>
 
 <section class="hero">
-  <h1>Stream of Verified, Talk-Ready Insurance Leads</h1>
-  <p>We qualify insurance prospects in real time — so you can focus on selling, not chasing.</p>
+  <h1>Stream of Verified, Talk-Ready Commercial Insurance Leads</h1>
+  <p>We qualify business insurance prospects in real time — so you can focus on selling, not chasing.</p>
   <a href="#form" class="cta-btn">Get Qualified Leads</a>
 </section>
 
