--- a/index.html
+++ b/index.html
@@ -166,6 +166,17 @@
   <p>We qualify business insurance prospects in real time — so you can focus on selling, not chasing.</p>
   <a href="#form" class="cta-btn">Get Qualified Leads</a>
 </section>
+  
+<section id="about" class="section">
+  <h2>About AgentFlux</h2>
+  <p style="text-align:center; max-width:750px; margin:0 auto; font-size:1.1rem; line-height:1.7;">
+    AgentFlux is built for independent and agency-based insurance producers who are tired of cold leads and wasted dials.
+    We use verified business data, live intent signals, and smart qualification funnels to deliver only 
+    <strong>ready-to-talk commercial insurance prospects</strong> — filtered by your exact criteria.
+    <br><br>
+    Our mission is simple: connect real buyers with real agents in real time.
+  </p>
+</section>
 
 <section id="how" class="section">
   <h2>How It Works</h2>
