--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       text-decoration: underline;
     }
 
-    /* HERO SECTION WITH IMAGE */
+    /* HERO SECTION WITH IMAGE BACKGROUND */
     .hero {
       text-align: center;
       padding: 5rem 1rem;
@@ -104,7 +104,7 @@
       box-shadow: 0 3px 6px rgba(0,0,0,0.05);
     }
 
-    /* FORM WITH IMAGE */
+    /* FORM SECTION */
     .form-container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -118,10 +118,12 @@
       border-radius: 8px;
       box-shadow: 0 3px 6px rgba(0,0,0,0.05);
       width: 100%;
+      order: 1;
     }
 
     .form-image {
       text-align: center;
+      order: 2;
     }
 
     .form-image img {
@@ -146,6 +148,16 @@
       border-radius: 6px;
       cursor: pointer;
       font-weight: 600;
+    }
+
+    /* Make sure form shows first on mobile */
+    @media (max-width: 768px) {
+      .form-container {
+        display: flex;
+        flex-direction: column;
+      }
+      form { order: 1; }
+      .form-image { order: 2; }
     }
 
     footer {
@@ -206,9 +218,7 @@
 
 <section id="form" class="section">
   <div class="form-container">
-    <div class="form-image">
-      <img src="https://via.placeholder.com/500x500?text=Insurance+Agent+Making+a+Call" alt="Insurance Agent Making a Call">
-    </div>
+    <!-- FORM FIRST -->
     <form action="https://hook.us2.make.com/rxu8cuvmll42rt4scbquoi6cus83tkuh" method="POST">
       <input type="text" name="name" placeholder="Full Name" required />
       <input type="text" name="agency" placeholder="Agency Name" required />
@@ -217,7 +227,13 @@
       <textarea name="message" placeholder="What types of insurance leads do you want? (e.g. Workers Comp, GL, Auto)" required></textarea>
       <button type="submit">Request Access</button>
     </form>
+
+    <!-- IMAGE SECOND -->
+    <div class="form-image">
+      <img src="https://via.placeholder.com/500x500?text=Insurance+Agent+Making+a+Call" alt="Insurance Agent Making a Call">
+    </div>
   </div>
+
   <script>
     const form = document.querySelector("form");
     form.addEventListener("submit", async (e) => {
