--- a/index.html
+++ b/index.html
@@ -197,6 +197,17 @@
   <p>We qualify business insurance prospects in real time — so you can focus on selling, not chasing.</p>
   <a href="#form" class="cta-btn">Get Qualified Leads</a>
 </section>
+  
+<section id="about" class="section">
+  <h2>About AgentFlux</h2>
+  <p style="text-align:center; max-width:750px; margin:0 auto; font-size:1.1rem; line-height:1.7;">
+    AgentFlux is built for independent and agency-based insurance producers who are tired of cold leads and wasted dials.
+    We use verified business data, live intent signals, and smart qualification funnels to deliver only 
+    <strong>ready-to-talk commercial insurance prospects</strong> — filtered by your exact criteria.
+    <br><br>
+    Our mission is simple: connect real buyers with real agents in real time.
+  </p>
+</section>
 
 <section id="how" class="section">
   <h2>How It Works</h2>
@@ -225,7 +236,7 @@
       <input type="email" name="email" placeholder="Business Email" required />
       <input type="tel" name="phone" placeholder="Phone Number" required />
       <textarea name="message" placeholder="What types of insurance leads do you want? (e.g. Workers Comp, GL, Auto)" required></textarea>
-      <button type="submit">Request Access</button>
+      <button type="submit">Free Consultation</button>
     </form>
 
     <!-- IMAGE SECOND -->
