--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
     <!-- IMAGE SECOND -->
     <div class="form-image">
-      <img src="https://via.placeholder.com/500x500?text=Insurance+Agent+Making+a+Call" alt="Insurance Agent Making a Call">
+      <img src="images/agent-calling.png" alt="Insurance agent making a call" style="width:100%; border-radius:8px;">
     </div>
   </div>
 
