--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
   </div>
 </section>
 
-<section id="form" class="section">
+<section id="form" class="section" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); align-items: center; gap: 2rem;">
   <div class="form-container">
     <!-- FORM FIRST -->
     <form action="https://hook.us2.make.com/rxu8cuvmll42rt4scbquoi6cus83tkuh" method="POST">
@@ -241,7 +241,7 @@
 
     <!-- IMAGE SECOND -->
     <div class="form-image">
-      <img src="images/agent-calling.png" alt="Insurance agent making a call" style="width:100%; border-radius:8px;">
+      <img src="images/agent-calling.png" alt="Insurance Agent Making a Call" style="width: 100%; max-width: 450px; border-radius: 8px; display: block; margin: 0 auto;">
     </div>
   </div>
 
