--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
   AgentFlux.com<br>
   123 Any Street Ave, Any Town, NM 80068<br><br>
   © 2025 AgentFlux.com – All Rights Reserved  
-  <div><a href="privacy.html">Privacy</a> | <a href="terms.html">Terms</a> | <a href="earnings.html">Earnings</a></div>
+  <div><a href="/privacy.html">Privacy</a> | <a href="/terms.html">Terms</a> | <a href="/earnings.html">Earnings</a></div>
 </footer>
 
 </body>
