--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AgentFlux.com – Verified, Talk-Ready Insurance Leads</title>
+  <!-- SEO Meta Tags -->
+<title>AgentFlux – Commercial Insurance Leads & Appointment Setting for Agencies</title>
+<meta name="description" content="AgentFlux helps commercial insurance agencies generate more sales appointments. Our US-based team cold calls and qualifies real businesses for Workers Comp, GL, Auto, and Property & Casualty insurance quotes.">
+<meta name="keywords" content="commercial insurance leads, workers comp leads, general liability leads, business insurance leads, property and casualty leads, insurance appointment setting, insurance telemarketing, B2B insurance leads, insurance cold calling, insurance lead generation company, qualified insurance leads, insurance lead service, appointment setting for insurance agents">
+<meta name="robots" content="index, follow">
+<meta property="og:title" content="AgentFlux – Commercial Insurance Leads & Appointment Setting for Agencies">
+<meta property="og:description" content="Get verified, talk-ready commercial insurance leads and appointments. Pay only for qualified leads that match your target client profile.">
+<meta property="og:image" content="https://agentflux.com/images/agent-calling.jpg">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://agentflux.com">
+
   <style>
     :root {
       --primary: #0066ff;
