--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- SEO Meta Tags -->
-<title>AgentFlux – Commercial Insurance Leads & Appointment Setting for Agencies</title>
-<meta name="description" content="AgentFlux helps commercial insurance agencies generate more sales appointments. Our US-based team cold calls and qualifies real businesses for Workers Comp, GL, Auto, and Property & Casualty insurance quotes.">
+<title>LeadStreamsHQ – Commercial Insurance Leads & Appointment Setting for Agencies</title>
+<meta name="description" content="LeadStreamsHQ helps commercial insurance agencies generate more sales appointments. Our US-based team cold calls and qualifies real businesses for Workers Comp, GL, Auto, and Property & Casualty insurance quotes.">
 <meta name="keywords" content="commercial insurance leads, workers comp leads, general liability leads, business insurance leads, property and casualty leads, insurance appointment setting, insurance telemarketing, B2B insurance leads, insurance cold calling, insurance lead generation company, qualified insurance leads, insurance lead service, appointment setting for insurance agents">
 <meta name="robots" content="index, follow">
-<meta property="og:title" content="AgentFlux – Commercial Insurance Leads & Appointment Setting for Agencies">
+<meta property="og:title" content="LeadStreamsHQ – Commercial Insurance Leads & Appointment Setting for Agencies">
 <meta property="og:description" content="Get verified, talk-ready commercial insurance leads and appointments. Pay only for qualified leads that match your target client profile.">
-<meta property="og:image" content="https://agentflux.com/images/agent-calling.jpg">
+<meta property="og:image" content="https://leadstreamshq.com/images/agent-calling.jpg">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://agentflux.com">
+<meta property="og:url" content="https://leadstreamshq.com">
 
   <style>
     :root {
@@ -194,7 +194,7 @@
 <body>
 
 <header>
-  <div class="logo">AgentFlux.com</div>
+  <div class="logo">LeadStreamsHQ.com</div>
   <nav>
     <a href="#how">How It Works</a>
     <a href="#form">Get Leads</a>
@@ -209,9 +209,9 @@
 </section>
   
 <section id="about" class="section">
-  <h2>About AgentFlux</h2>
+  <h2>About LeadStreamsHQ</h2>
   <p style="text-align:center; max-width:750px; margin:0 auto; font-size:1.1rem; line-height:1.7;">
-    AgentFlux is built for independent and agency-based insurance producers who are tired of cold leads and wasted dials.
+    LeadStreamsHQ is built for independent and agency-based insurance producers who are tired of cold leads and wasted dials.
     We use verified business data, live intent signals, and smart qualification funnels to deliver only 
     <strong>ready-to-talk commercial insurance prospects</strong> — filtered by your exact criteria.
     <br><br>
@@ -279,9 +279,9 @@
 </section>
 
 <footer>
-  AgentFlux.com<br>
+  LeadStreamsHQ.com<br>
   123 Any Street Ave, Any Town, NM 80068<br>(419) 359-4282<br><br>
-  © 2025 AgentFlux.com – All Rights Reserved  
+  © 2025 LeadStreamsHQ.com – All Rights Reserved  
   <div><a href="/privacy.html">Privacy</a> | <a href="/terms.html">Terms</a> | <a href="/earnings.html">Earnings</a></div>
 </footer>
 
