--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       <input type="email" name="email" placeholder="Business Email" required />
       <input type="tel" name="phone" placeholder="Phone Number" required />
       <textarea name="message" placeholder="What types of insurance leads do you want? (e.g. Workers Comp, GL, Auto)" required></textarea>
-      <button type="submit">Free Consultation</button>
+      <button type="submit">Discovery Call</button>
     </form>
 
     <!-- IMAGE SECOND -->
