--- a/index.html
+++ b/index.html
@@ -224,7 +224,9 @@
   <div class="steps">
     <div class="card">
       <h3>1️⃣ We Pre-Qualify</h3>
-      <p>Using top-tier data sources like LeO and InsuranceXDate, we identify verified, renewal-ready business owners.</p>
+     <p class="text-gray-600 max-w-2xl mx-auto">
+      By combining premium business data with expert research, we connect you with verified, renewal-ready decision-makers.
+    </p>
     </div>
     <div class="card">
       <h3>2️⃣ You Get Pre-Qualified Leads</h3>
