--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       padding: 5rem 1rem;
       color: var(--text-light);
       background: linear-gradient(to bottom right, rgba(0,102,255,0.85), rgba(0,75,181,0.85)),
-        url('https://via.placeholder.com/1600x800?text=Insurance+Agent+on+Call') center/cover no-repeat;
+        url('images/top-banner-art.jpg') center/cover no-repeat;
     }
 
     .hero h1 {
