--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
   11585 Hwy 180 E, Silver City, NM 88061<br>(419) 359-4282<br><br>
   © 2025 LeadStreamsHQ.com – All Rights Reserved  
   <div><a href="/privacy.html">Privacy</a> | <a href="/terms.html">Terms</a> | <a href="/earnings.html">Earnings</a></div>
-</footer>
+<div><a href="https://www.leadstreamshq.com/">commercial insurance leads</a> </footer>
 
 </body>
 </html>
